--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="card curve">
-            <img class="avatar curve" src="images/profile.jpeg">
+            <img class="avatar curve" src="profile.jpeg">
             <div >
                 <h3>Kyle T Xia</h3>
                 <p>College Dropout</p>
